@@ -75,9 +75,14 @@ fi
 
 if [ ! -f /etc/nginx/ssl/self-signed-wlanpi.cert ]; then
     mkdir -p /etc/nginx/ssl
+    mkdir -p /etc/cockpit/ws-certs.d
     openssl req -x509 -newkey rsa:4096 -sha256 -days 3650 \
         -nodes -keyout /etc/nginx/ssl/self-signed-wlanpi.key -out /etc/nginx/ssl/self-signed-wlanpi.cert \
         -subj "/CN=wlanpi.local/O=wlanpi/OU=wlanpi"
+    chmod 644 /etc/nginx/ssl/self-signed-wlanpi.cert
+    chmod 640 /etc/nginx/ssl/self-signed-wlanpi.key
+    cp /etc/nginx/ssl/self-signed-wlanpi.key /etc/cockpit/ws-certs.d/0-self-signed-wlanpi.key
+    cp /etc/nginx/ssl/self-signed-wlanpi.cert /etc/cockpit/ws-certs.d/0-self-signed-wlanpi.cert
     CONF_CHANGED=0
 fi
 
@@ -106,9 +111,6 @@ fi
 if [ -d /var/www/librespeed ]; then
     chown -R www-data:www-data /var/www/librespeed
 fi
-
-echo "Restarting cockpit ..."
-deb-systemd-invoke restart cockpit.service
 
 echo "Restarting wlanpi-core ..."
 deb-systemd-invoke restart wlanpi-core.service
