@@ -64,8 +64,8 @@ serve_from_sub_path = true
 ;enable_gzip = false
 
 # https certs & key file
-cert_file = /etc/nginx/ssl/self-signed-wlanpi.cert
-cert_key = /etc/nginx/ssl/self-signed-wlanpi.key
+cert_file = /etc/nginx/ssl/self-signed-grafana.cert
+cert_key = /etc/nginx/ssl/self-signed-grafana.key
 
 # Unix socket gid
 # Changing the gid of a file without privileges requires that the target group is in the group of the process and that the process is the file owner
