@@ -1,6 +1,7 @@
 import subprocess
 
-from flask import current_app
+import requests
+from flask import current_app, redirect, request
 
 
 def service_down(service: str):
@@ -34,3 +35,52 @@ def systemd_service_message(service):
         return f"{service} is running"
     else:
         return f"{service} is not running"
+
+
+def start_stop_service(task, service):
+    """
+    Starts or stops a service using wlanpi-core.
+    """
+    headers = {
+        "accept": "application/json",
+        "content-type": "application/x-www-form-urlencoded",
+    }
+    params = {
+        "name": f"{service}",
+    }
+    if task == "start":
+        current_app.logger.info("starting %s" % service)
+        try:
+            start_url = "http://127.0.0.1:31415/api/v1/system/service/start"
+            response = requests.post(
+                start_url,
+                params=params,
+                headers=headers,
+            )
+            if response.status_code != 200:
+                current_app.logger.info(
+                    f'systemd_service_message: {systemd_service_message("wlanpi-core")}'
+                )
+                current_app.logger.info("%s generated %s response", start_url, response)
+            return redirect(request.referrer)
+        except Exception as error:
+            current_app.logger.error(error)
+            return redirect(request.referrer)
+    elif task == "stop":
+        current_app.logger.info("stopping %s" % service)
+        try:
+            stop_url = "http://127.0.0.1:31415/api/v1/system/service/stop"
+            response = requests.post(
+                stop_url,
+                params=params,
+                headers=headers,
+            )
+            if response.status_code != 200:
+                current_app.logger.info(
+                    f'systemd_service_message: {systemd_service_message("wlanpi-core")}'
+                )
+                current_app.logger.info("%s generated %s response", stop_url, response)
+            return redirect(request.referrer)
+        except Exception as error:
+            current_app.logger.error(error)
+            return redirect(request.referrer)
